# gyakubiki-syllabus

./: .dockerignore  .gitattributes  .gitignore  .golangci.yml  .markdownlint.yaml  .mise.toml  .typos.toml  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  _typos.toml  committed.toml  compose.yaml  data.json  go.mod  justfile  lefthook.yml  release-please-config.json  rust-toolchain.toml
.cargo/: mutants.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/scripts/: commit-data.sh  commit-signed.sh  data-pr.sh  sync-data.sh
.github/workflows/: ci.yml  codeql.yml  deploy.yml  fetch-details.yml  fetch-parity.yml  fetch-syllabus.yml  fuzz.yml  mutants.yml  visual-baseline.yml
cmd/syllabus-cli/: fetch.go  logger.go  main.go  main_test.go
crates/cli/: Cargo.toml
crates/cli/assets/: findpage_body.tmpl.json
crates/cli/assets/testdata/: findpage_body.golden.json
crates/cli/fuzz/: Cargo.toml  README.md
crates/cli/fuzz/fuzz_targets/: fuzz_parse_jikanwari.rs  fuzz_parse_sansho_html.rs
crates/cli/src/: banner.rs  commit.rs  convert.rs  fields.rs  gen_sample.rs  io.rs  lib.rs  main.rs  net.rs  palette.rs  term.rs
crates/cli/src/detail/: classify.rs  enrich.rs  mod.rs  model.rs  parse.rs
crates/cli/src/fetch/: client.rs  mod.rs  token.rs
crates/cli/src/fetch_details/: client.rs  mod.rs  ui.rs
crates/cli/src/snapshots/: syllabus_cli__fields__tests__render_md_snapshot.snap  syllabus_cli__fields__tests__render_ts_snapshot.snap
crates/cli/tests/: cli_dispatch.rs  detail_parse.rs  detail_robust.rs  fingerprint.rs  golden_convert.rs  invariants.proptest-regressions  invariants.rs
crates/cli/tests/fixtures/: fingerprint.snapshot  sample_data.golden.json  sample_raw.json  sansho_sample.html
crates/core/: Cargo.toml
crates/core/src/: bitset.rs  convert.rs  dict.rs  engine.rs  grid.rs  index.rs  lib.rs  model.rs  parser.rs  text.rs
crates/core/src/plan/: conflict.rs  credits.rs  mod.rs
crates/core/src/search/: mod.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
crates/wasm/tests/: boundary.rs
docs/: kulas-api-fields.md  kulas-api-spec.md  overview-ja.md  syllabus-fields.md  testing.md
internal/fetch/: client.go  dump.go  fetch.go  fetch_test.go  html_token.go  signalr.go  tls.go
internal/inspect/: inspect.go  inspect_test.go
internal/model/: model.go
internal/parser/: parser.go  parser_test.go
internal/transform/: transform.go  transform_test.go  v2.go  v2_test.go
raw/: 朝倉キャンパス開講-02.json  朝倉キャンパス開講-03.json  朝倉キャンパス開講-04.json  朝倉キャンパス開講-05.json  朝倉キャンパス開講.json  講義データ-02.json  講義データ-03.json  講義データ-04.json  講義データ-05.json  講義データ-06.json  講義データ-07.json  講義データ-08.json  講義データ.json
raw-details/: 00001.json  00002.json  00003.json  00004.json  00005.json  00006.json  00007.json  00100.json  00101.json  00102.json  00103.json  00104.json  00105.json  00106.json  00107.json  00108.json  00109.json  00110.json  00111.json  00112.json  00113.json  00114.json  00115.json  00116.json  00117.json  00119.json  00120.json  00121.json  00122.json  00123.json  00124.json  00125.json  00126.json  00127.json  00128.json  00129.json  00130.json  00200.json  00201.json  00202.json  (+3892 more)
web/: .gitignore  DESIGN.md  README.md  biome.json  index.html  package.json  playwright.config.ts  stryker.conf.json  tsconfig.app.json  vite.config.ts  vitest-setup.ts
web/e2e/: a11y.spec.ts  app.spec.ts  filters.spec.ts  gestures.spec.ts  global-setup.ts  helpers.ts  modal.spec.ts  responsive.spec.ts  search.spec.ts  sticky-period.spec.ts  timetable.spec.ts  visual.spec.ts
web/public/: manifest.webmanifest
web/src/: App.svelte  app.css  build-flags.d.ts
web/src/components/: BottomSheet.svelte  BottomSheet.svelte.test.ts  BottomSheetHarness.svelte  CourseCard.svelte  CourseModal.svelte  Disclaimer.svelte  EvalChart.svelte  FileLoader.svelte  FilterBar.svelte  PlanPanel.svelte  SearchBar.svelte  Timetable.svelte  Timetable.svelte.test.ts  TimetableCell.svelte  TimetableCell.svelte.test.ts
web/src/lib/: bitset.test.ts  bitset.ts  breakpoint.svelte.ts  breakpoint.test.ts  colors.test.ts  colors.ts  contrast.ts  course-index.test.ts  course-index.ts  design-tokens.test.ts  detail-format.test.ts  detail-format.ts  details.ts  engine.test.ts  engine.ts  engine.worker.ts  eval-chart.test.ts  eval-chart.ts  filters.test.ts  filters.ts  gestures.svelte.test.ts  gestures.test.ts  gestures.ts  grid.test.ts  grid.ts  highlight.svelte.ts  highlight.test.ts  load-data.test.ts  load-data.ts  palette.test.ts  plan-codec.test.ts  plan-codec.ts  plan.svelte.test.ts  plan.svelte.ts  schedule.ts  sdgs.test.ts  sdgs.ts  semester.test.ts  semester.ts  syllabus-fields.generated.ts  (+5 more)
web/src/types/: course.ts
