[package]
name = "syllabus-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Native CLI that builds data.json from raw KULAS JSON — the Rust port of the Go pipeline."

[[bin]]
name = "syllabus-cli"
path = "src/main.rs"

[dependencies]
syllabus-core = { path = "../core" }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = "0.4"
