[package]
name = "syllabus-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Native CLI that builds data.json from raw KULAS JSON — the Rust port of the Go pipeline."

[lib]
name = "syllabus_cli"
path = "src/lib.rs"

[[bin]]
name = "syllabus-cli"
path = "src/main.rs"

[dependencies]
syllabus-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = "0.4"
# fetch: blocking HTTP with a cookie jar; native-tls (OpenSSL) mirrors the Go
# pipeline's SystemCertPool + AppendCertsFromPEM so the embedded KULAS
# intermediate CA completes the chain the same way. `gzip` mirrors Go's
# net/http, which advertises Accept-Encoding: gzip and decompresses
# transparently — so the bytes written match Go's regardless of server encoding.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "cookies", "native-tls", "gzip"] }
regex = "1"
base64 = "0.22"
