[package]
name = "syllabus-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Native CLI that builds data.json from raw KULAS JSON."

[lib]
name = "syllabus_cli"
path = "src/lib.rs"

[[bin]]
name = "syllabus-cli"
path = "src/main.rs"

[dependencies]
syllabus-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = "0.4"
# fetch: blocking HTTP with a cookie jar. native-tls lets the embedded KULAS
# intermediate CA complete the chain; gzip decompresses responses transparently.
reqwest = { version = "0.13", default-features = false, features = ["blocking", "cookies", "native-tls", "gzip", "json"] }
regex = "1"
base64 = "0.22"
# detail scraping: parse the KULAS "シラバス参照" HTML (server-rendered tables).
scraper = "0.23"
# scraper's tree lib — used to read a cell's own text while pruning nested tables.
ego-tree = "0.10"
# fetch-details politeness: jittered sleep between requests.
rand = "0.9"

[dev-dependencies]
# Property-based tests (parsers, invariants) and CLI process assertions. Dev-only
# — not part of the shipped binary.
proptest = "1"
assert_cmd = "2"
predicates = "3"
insta = "1.48.0"
