[package]
name = "syllabus-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure, platform-agnostic core for the gyakubiki-syllabus viewer (model, normalize, bitset, index, grid)."

[lib]
name = "syllabus_core"

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# Dev-only. Property-based tests for the pure parsers/transforms. Never compiled
# into the shipped WASM/native binary, so this does not affect artifact size.
[dev-dependencies]
proptest = "1"
