[package]
name = "syllabus-wasm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "wasm-bindgen wrapper exposing syllabus-core to the browser."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
syllabus-core = { path = "../core" }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
# WASM boundary tests, run via `wasm-pack test --node`. serde_json inspects the
# JsValue shapes the JS side depends on (camelCase keys, dictionary keys).
wasm-bindgen-test = "0.3"
serde_json = "1"
